make each lecture page link to the index

--- a/lectures/index.html
+++ b/lectures/index.html
@@ -6,31 +6,31 @@
   
   <body>
     
-    <h2>Links to notes for individual lectures</h2>
+    <h2>Index of individual lectures</h2>
     
     <ul>
-      <li><a href="lecture-01.html">Lecture 01</a></li>
-      <li><a href="lecture-02.html">Lecture 02</a></li>
-      <li><a href="lecture-03.html">Lecture 03</a></li>
-      <li><a href="lecture-04.html">Lecture 04</a></li>
-      <li><a href="lecture-05.html">Lecture 05</a></li>
-      <li><a href="lecture-06.html">Lecture 06</a></li>
-      <li><a href="lecture-07.html">Lecture 07</a></li>
-      <li><a href="lecture-08.html">Lecture 08</a></li>
-      <li><a href="lecture-09.html">Lecture 09</a></li>
-      <li><a href="lecture-10.html">Lecture 10</a></li>
-      <li><a href="lecture-11.html">Lecture 11</a></li>
-      <li><a href="lecture-12.html">Lecture 12</a></li>
-      <li><a href="lecture-13.html">Lecture 13</a></li>
-      <li><a href="lecture-14.html">Lecture 14</a></li>
-      <li><a href="lecture-15.html">Lecture 15</a></li>
-      <li><a href="lecture-16.html">Lecture 16</a></li>
-      <li><a href="lecture-17.html">Lecture 17</a></li>
-      <li><a href="lecture-18.html">Lecture 18</a></li>
-      <li><a href="lecture-19.html">Lecture 19</a></li>
-      <li><a href="lecture-20.html">Lecture 20</a></li>
-      <li><a href="lecture-21.html">Lecture 21</a></li>
-      <li><a href="lecture-22.html">Lecture 22</a></li>
+      <li><a href="lecture-01.html">Lecture 01&ndash;Course overview, BSL expressions, functions</a></li>
+      <li><a href="lecture-02.html">Lecture 02&ndash;How to Design Functions (HtDF recipe)</a></li>
+      <li><a href="lecture-03.html">Lecture 03&ndash;How to Design Data (HtDD recipe)</a></li>
+      <li><a href="lecture-04.html">Lecture 04&ndash;Interactive programs, big-bang and the HtDW recipe</a></li>
+      <li><a href="lecture-05.html">Lecture 05&ndash;Compound data, extending an existing world program</a></li>
+      <li><a href="lecture-06.html">Lecture 06&ndash;Arbitrary-sized data, self reference, and natural recursion</a></li>
+      <li><a href="lecture-07.html">Lecture 07&ndash;Simple reference in types and natural helpers</a></li>
+      <li><a href="lecture-08.html">Lecture 08&ndash;</a></li>
+      <li><a href="lecture-09.html">Lecture 09&ndash;</a></li>
+      <li><a href="lecture-10.html">Lecture 10&ndash;</a></li>
+      <li><a href="lecture-11.html">Lecture 11&ndash;</a></li>
+      <li><a href="lecture-12.html">Lecture 12&ndash;</a></li>
+      <li><a href="lecture-13.html">Lecture 13&ndash;</a></li>
+      <li><a href="lecture-14.html">Lecture 14&ndash;</a></li>
+      <li><a href="lecture-15.html">Lecture 15&ndash;</a></li>
+      <li><a href="lecture-16.html">Lecture 16&ndash;</a></li>
+      <li><a href="lecture-17.html">Lecture 17&ndash;</a></li>
+      <li><a href="lecture-18.html">Lecture 18&ndash;</a></li>
+      <li><a href="lecture-19.html">Lecture 19&ndash;</a></li>
+      <li><a href="lecture-20.html">Lecture 20&ndash;</a></li>
+      <li><a href="lecture-21.html">Lecture 21&ndash;</a></li>
+      <li><a href="lecture-22.html">Lecture 22&ndash;</a></li>
     </ul>
 
   </body>
