next class -> that lecture; line breaking; ndash

--- a/lectures/lecture-03.html
+++ b/lectures/lecture-03.html
@@ -43,7 +43,10 @@
       following edX modules:</p>
 
     <ul>
-      <li>All material covered in the Beginning Student Language (1a) and How to Design Functions (1b) modules. That means all the sections, the videos and all the questions interspersed in those videos.</li>
+      <li>All material covered in the Beginning Student Language (1a)
+	and How to Design Functions (1b) modules. That means all the
+	sections, the videos and all the questions interspersed in those
+	videos.</li>
       <li>In the How to Design Data module, work through the following videos:
 	<ul>
 	  <li>cond expressions</li>
@@ -51,12 +54,13 @@
 	  <li>Atomic Non-Distinct</li>
 	  <li>HtDF With Non-Primitive Data</li>
 	</ul>
+      </li>
     </ul>
     
     <h3>During Lecture</h3>
 
     <p>The How to Design Data (HtDD) recipe addresses a crucial issue
-    in the design of programs - how to design the data the program
+    in the design of programs&ndash;how to design the data the program
     operates on. Like the HtDF recipe, HtDD initially seems trivial
     and like too big a tool for the job.  But by learning to design
     data systematically now you will have an easier time with the
@@ -95,7 +99,7 @@
       <li><a href="m02-grade-standing-solution.rkt">m02-grade-standing-solution.rkt</a></li>
     </ul>
 
-    <p>Be sure to complete the before lecture section of <a href="lecture-04.html">Lecture 4</a> before the next class.</p>
+    <p>Be sure to complete the before lecture section of <a href="lecture-04.html">Lecture 4</a> before that lecture.</p>
     
   </body>
 </html>
