--- a/lectures/lecture-04.html
+++ b/lectures/lecture-04.html
@@ -59,7 +59,7 @@
       designing programs.  But real programs are much more than a
       single data definition or a single function.  Indeed they can
       comprise thousands of data definitions and tens of thousands of
-      functions - or even much more. Managing such a large project
+      functions&ndash;or even much more. Managing such a large project
       requires working systematically.</p>
 
     <p>The world program recipe (HtDW) helps us manage the design of a
@@ -76,7 +76,7 @@
 	operating on atomic data.</li>
       <li> Complete the entire design, including every
 	HtDW, HtDD, and HtDF design element.</li>
-      <li> Use all appropriate metadata tags - @htdw, @htdd, @dd-template-rules,
+      <li> Use all appropriate metadata tags&ndash;@htdw, @htdd, @dd-template-rules,
 	@htdf, @signature, and @template.</li>
     </ul>
 
@@ -157,9 +157,9 @@
       critical that you have this material mastered before next lecture.</p>
     
     <p>Finally be sure to complete the Before Lecture section of the next
-      lecture before the next class.</p>
+      lecture before that lecture.</p>
 
-    <p>Be sure to complete the before lecture section of <a href="lecture-05.html">Lecture 5</a> before the next class.</p>
+    <p>Be sure to complete the before lecture section of <a href="lecture-05.html">Lecture 5</a> before that lecture.</p>
     
   </body>
 </html>
