--- a/lectures/lecture-05.html
+++ b/lectures/lecture-05.html
@@ -49,7 +49,7 @@
     <p>Writing a new program from scratch is fun, but programmers
       actually spend most of their time improving existing programs.
       Remember, any program that someone actually uses constantly
-      requires revisions - to fix existing functionality, to add new
+      requires revisions&ndash;to fix existing functionality, to add new
       functionality, or just to adapt to changes in surrounding
       programs.  You can revise existing programs reliably by following
       the same systematic design process used to develop them in the
@@ -113,7 +113,7 @@
     out!  In the key handler pay particular attention to the
     template. Rather than templating it from Spider, we template it
     according to KeyEvent using the large enumeration rule. The
-    Improving a World Program - Add Key Handler section goes into this
+    Improving a World Program&ndash;Add Key Handler section goes into this
     in some detail.</p>
 
     <p>A very good way to review this material--and really to review the
@@ -130,7 +130,7 @@
       Cowabunga. You can go to instructor office hours or TA hours in
       the DLC (see the course web page) for additional help.</p>
 
-    <p>Be sure to complete the before lecture section of <a href="lecture-06.html">Lecture 6</a> before the next class.</p>
+    <p>Be sure to complete the before lecture section of <a href="lecture-06.html">Lecture 6</a> before that lecture.</p>
 
   </body>
 </html>
