--- a/lectures/lecture-06.html
+++ b/lectures/lecture-06.html
@@ -94,7 +94,7 @@
       techniques throughout the rest of the course.</p>
 
     <p>Below are some notes that can help you master this material. It
-      is crucial that you do so - in the next lecture, we will do a
+      is crucial that you do so&ndash;in the next lecture, we will do a
       world program with lists!</p>
 
     <p>First, note that what we have been learning about templating
@@ -160,9 +160,9 @@
     <p>To review:</p>
 
     <ul>
-      <li> Work through the units of the Self-Reference module: - The
-	first 5 cover the same ground as covered in lecture, but go
-	into some important points in more detail.</li>
+      <li> Work through the units of the Self-Reference module. The
+	first 5 cover the same ground as covered in the lecture, but
+	go into some important points in more detail.</li>
       <li> Work through the "Designing with Lists" unit
 	carefully. This is a chance to really solidify your
 	understanding of functions that operate on lists.</li>
@@ -172,13 +172,10 @@
 	techniques later in the course.</li>
       <li>As always, work the practice problems in the module
 	(Self-Reference) and re-work our own problems from class!</li>
-      <li>Finally be sure to complete the Before Lecture section of
-	the next lecture before the next class.</li>
-    </ul>
+    </ul> 
     
     <p>Be sure to complete the before lecture section
-      of <a href="lecture-07.html">Lecture 7</a> before the next
-      class.</p>
+      of <a href="lecture-07.html">Lecture 7</a> before that lecture.</p>
 
   </body>
 </html>
