--- a/lectures/lecture-07.html
+++ b/lectures/lecture-07.html
@@ -238,7 +238,7 @@
     are not the kind of comment that we would normally leave in
     code. They are temporary.</p>
 
-    <p>Be sure to complete the before lecture section of <a href="lecture-08.html">Lecture 8</a> before the next class.</p>
+    <p>Be sure to complete the before lecture section of <a href="lecture-08.html">Lecture 8</a> before that lecture.</p>
 
   </body>
 </html>
