--- a/lectures/lecture-10.html
+++ b/lectures/lecture-10.html
@@ -87,7 +87,7 @@
 
     <p>Again, welcome to 110.  If you work hard and stay caught up we believe you will enjoy discovering programming and a knowing a systemtic approach to solving difficult design problems.</p>
     
-    <p>Be sure to complete the before lecture section of <a href="lecture-02.html">Lecture 3</a> before the next class.</p>
+    <p>Be sure to complete the before lecture section of <a href="lecture-02.html">Lecture 3</a> before that lecture.</p>
 
   </body>
 </html>
