add lecture 8 and 9

--- a/lectures/index.html
+++ b/lectures/index.html
@@ -16,8 +16,8 @@
       <li><a href="lecture-05.html">Lecture 05&ndash;Compound data, extending an existing world program</a></li>
       <li><a href="lecture-06.html">Lecture 06&ndash;Arbitrary-sized data, self reference, and natural recursion</a></li>
       <li><a href="lecture-07.html">Lecture 07&ndash;Simple reference in types and natural helpers</a></li>
-      <li><a href="lecture-08.html">Lecture 08&ndash;</a></li>
-      <li><a href="lecture-09.html">Lecture 09&ndash;</a></li>
+      <li><a href="lecture-08.html">Lecture 08&ndash;Recursive functions on naturals; three more helper rules</a></li>
+      <li><a href="lecture-09.html">Lecture 09&ndash;</a>Fixed arity trees</li>
       <li><a href="lecture-10.html">Lecture 10&ndash;</a></li>
       <li><a href="lecture-11.html">Lecture 11&ndash;</a></li>
       <li><a href="lecture-12.html">Lecture 12&ndash;</a></li>
