--- a/lectures/index.html
+++ b/lectures/index.html
@@ -17,9 +17,9 @@
       <li><a href="lecture-06.html">Lecture 06&ndash;Arbitrary-sized data, self reference, and natural recursion</a></li>
       <li><a href="lecture-07.html">Lecture 07&ndash;Simple reference in types and natural helpers</a></li>
       <li><a href="lecture-08.html">Lecture 08&ndash;Recursive functions on naturals; three more helper rules</a></li>
-      <li><a href="lecture-09.html">Lecture 09&ndash;</a>Fixed arity trees</li>
-      <li><a href="lecture-10.html">Lecture 10&ndash;</a></li>
-      <li><a href="lecture-11.html">Lecture 11&ndash;</a></li>
+      <li><a href="lecture-09.html">Lecture 09&ndash;Fixed arity trees</a></li>
+      <li><a href="lecture-10.html">Lecture 10&ndash;Mutual reference and mutual recursion</a></li>
+      <li><a href="lecture-11.html">Lecture 11&ndash;2 one-of</a></li>
       <li><a href="lecture-12.html">Lecture 12&ndash;</a></li>
       <li><a href="lecture-13.html">Lecture 13&ndash;</a></li>
       <li><a href="lecture-14.html">Lecture 14&ndash;</a></li>
