renumber m03-compound-spider

--- a/lectures/lecture-05.html
+++ b/lectures/lecture-05.html
@@ -71,7 +71,8 @@
       program. Here is the starter for today:</p>
 
     <ul>
-      <li>m03-compound-spider-starter.rkt</li>
+      <li><a href="m03-compound-spider-starter.rkt">m03-compound-spider-starter.rkt</a></li>
+      <li><a href="m03-compound-spider-v1.rkt">m03-compound-spider-v1.rkt</a></li>
     </ul>
 	
     
@@ -89,8 +90,8 @@
     <p>Here are the solutions for this lecture:</p>
 
     <ul>
-      <li><a href="m03-compound-spider-v1-solution.rkt">m03-compound-spider-v1-solution.rkt</a></li>
-      <li><a href="m03-compound-spider-v2-solution.rkt">m03-compound-spider-v2-solution.rkt</a></li>
+      <li><a href="m03-compound-spider-solution.rkt">m03-compound-spider-solution.rkt</a></li>
+      <li><a href="m03-compound-spider-v3.rkt">m03-compound-spider-v3.rkt</a></li>
     </ul>
 
     <p>We started with a working world program, changed the
