fix ref to be href

--- a/lectures/lecture-03.html
+++ b/lectures/lecture-03.html
@@ -84,9 +84,9 @@
     <p>The starter files for today are:</p>
 
     <ul>
-      <li><a ref="m02-status-starter.rkt">m02-status-starter.rkt</a></li>
-      <li><a ref="m02-grade-standing-starter.rkt">m02-grade-standing-starter.rkt</a></li>
-      <li><a ref="m02-grade-standing-documents.rkt">m02-grade-standing-documents.rkt</a></li>
+      <li><a href="m02-status-starter.rkt">m02-status-starter.rkt</a></li>
+      <li><a href="m02-grade-standing-starter.rkt">m02-grade-standing-starter.rkt</a></li>
+      <li><a href="m02-grade-standing-documents.rkt">m02-grade-standing-documents.rkt</a></li>
     </ul>
 
     <h3>After Lecture</h3>
