change lecture 5 so order is tock, reverse, render

--- a/lectures/lecture-05.html
+++ b/lectures/lecture-05.html
@@ -68,11 +68,12 @@
     </ul>
 	
     <p>In this lecture we will continue working on the spider world
-      program. Here is the starter for today:</p>
+      program. Here are the starters for today:</p>
 
     <ul>
       <li><a href="m03-compound-spider-starter.rkt">m03-compound-spider-starter.rkt</a></li>
       <li><a href="m03-compound-spider-v1.rkt">m03-compound-spider-v1.rkt</a></li>
+      <li><a href="m03-compound-spider-v2.rkt">m03-compound-spider-v2.rkt</a></li>
     </ul>
 	
     
@@ -91,7 +92,6 @@
 
     <ul>
       <li><a href="m03-compound-spider-solution.rkt">m03-compound-spider-solution.rkt</a></li>
-      <li><a href="m03-compound-spider-v3.rkt">m03-compound-spider-v3.rkt</a></li>
     </ul>
 
     <p>We started with a working world program, changed the
