add lecture 12 and 13 .html

--- a/lectures/index.html
+++ b/lectures/index.html
@@ -20,7 +20,7 @@
       <li><a href="lecture-09.html">Lecture 09&ndash;Fixed arity trees</a></li>
       <li><a href="lecture-10.html">Lecture 10&ndash;Mutual reference and mutual recursion</a></li>
       <li><a href="lecture-11.html">Lecture 11&ndash;2 one-of</a></li>
-      <li><a href="lecture-12.html">Lecture 12&ndash;</a></li>
+      <li><a href="lecture-12.html">Lecture 12&ndash;local expressions</a></li>
       <li><a href="lecture-13.html">Lecture 13&ndash;</a></li>
       <li><a href="lecture-14.html">Lecture 14&ndash;</a></li>
       <li><a href="lecture-15.html">Lecture 15&ndash;</a></li>
