--- a/lectures/lecture-09.html
+++ b/lectures/lecture-09.html
@@ -59,19 +59,18 @@
     
     <h3>After Lecture</h3>
 
-        <p>First complete any starters we did not complete during
-      lecture.</p>
+    <p>First complete the lookup, count, and count-odds starters that did
+      not complete during lecture.</p>
 
     <p>This material is harder than before &ndash; and at the same
       time, once you use the recipes and especially what the recipes
       tell you about working with arbitrary sized data, it isn't that
       hard. What's hard is letting the recipes guide you.</p>
 
-    <p>As usual, re-working all these exampls would be a great way to
-      review this material and cement your understanding of the
-      material.</p>
+    <p>As usual, working through all these examples is a great way to
+      really learn this material.</p>
 
-    <p>Then you can make two improvements:</p>
+    <p>Then you can make two improvements to render-bst:</p>
 
     <ul>
 
