--- a/lectures/lecture-12.html
+++ b/lectures/lecture-12.html
@@ -39,12 +39,12 @@
     
     <h3>Before Lecture</h3>
 
-    <p>In this lecture you will learn how to use the local expression
-    construct available in the Intermediate Student Language. How
-    local expressions are formed and evaluated is covered in the
-    following edX videos. It is critical you understand this before
-    coming to lecture, because the lecture itself will be focused on
-    how to use local expressions. </p>
+    <p>In this lecture you will learn how to use local expressions, a
+    new language construct available in the Intermediate Student
+    Language. How local expressions are formed and evaluated is
+    covered in the following edX videos. It is critical you understand
+    this before coming to lecture, because the lecture itself will be
+    focused on how to use local expressions. </p>
 
     <ul>
       <li>Local - Introduction</li>
@@ -72,10 +72,15 @@
     
     <h3>After Lecture</h3>
 
-    <p>Today we went through the Local module. You learned before class what local means and how it is evaluated. In class we saw three important ways to use it. For all three of those we saw a refactoring that allows you to take a working program and revise it, in a few simple steps, to be an improved program using local. They were:</p>
+    <p>Today we went through the Local module. You learned before
+    class what local means and how it is evaluated. In class we saw
+    three important ways to use it. For all three of those we saw a
+    refactoring that allows you to take a working program and revise
+    it, in a few simple steps, to be an improved program using
+    local. They were:</p>
 
     <ul>
-      <li>to avoid [repeated identical recursive calls (these cause exponential performance problems)</li>
+      <li>to avoid duplicate <em>identical</em> recursive calls (these cause exponential performance problems)</li>
       <li>for encapsulation</li>
       <li>to give meaningful names to intermediate values</li>
     </ul>
@@ -96,11 +101,11 @@
       these inner functions directly - this is not necessary but again
       it can be VERY helpful!<p>
 
-      <p>At the very end we saw that sometimes we use local for two
+    <p>At the very end we saw that sometimes we use local for two
       different purposes in the same function -- encapsulation and
       avoiding redundant calls to a recursive function.</p>
 
-      <p>There's a third way to use local, which is to give meaningful
+    <p>There's a third way to use local, which is to give meaningful
       names to intermediate values.  Used properly this can make an
       otherwise complex function easier to understand.  You should
       carefully compare the intermediate and final versions of the
