--- a/lectures/index.html
+++ b/lectures/index.html
@@ -20,17 +20,17 @@
       <li><a href="lecture-09.html">Lecture 09&ndash;Fixed arity trees</a></li>
       <li><a href="lecture-10.html">Lecture 10&ndash;Mutual reference and mutual recursion</a></li>
       <li><a href="lecture-11.html">Lecture 11&ndash;2 one-of</a></li>
-      <li><a href="lecture-12.html">Lecture 12&ndash;local expressions</a></li>
-      <li><a href="lecture-13.html">Lecture 13&ndash;</a></li>
-      <li><a href="lecture-14.html">Lecture 14&ndash;</a></li>
-      <li><a href="lecture-15.html">Lecture 15&ndash;</a></li>
-      <li><a href="lecture-16.html">Lecture 16&ndash;</a></li>
-      <li><a href="lecture-17.html">Lecture 17&ndash;</a></li>
-      <li><a href="lecture-18.html">Lecture 18&ndash;</a></li>
-      <li><a href="lecture-19.html">Lecture 19&ndash;</a></li>
-      <li><a href="lecture-20.html">Lecture 20&ndash;</a></li>
-      <li><a href="lecture-21.html">Lecture 21&ndash;</a></li>
-      <li><a href="lecture-22.html">Lecture 22&ndash;</a></li>
+      <li><a href="lecture-12.html">Lecture 12&ndash;Local Expressions</a></li>
+      <li><a href="lecture-13.html">Lecture 13&ndash;</a>Abstraction and Polymorphic Functions</li>
+      <li><a href="lecture-14.html">Lecture 14&ndash;</a>Fold Functions</li>
+      <li><a href="lecture-15.html">Lecture 15&ndash;</a>Generative Recursion</li>
+      <li><a href="lecture-16.html">Lecture 16&ndash;</a>Search Problems</li>
+      <li><a href="lecture-17.html">Lecture 17&ndash;</a>Search Problems cont'd</li>
+      <li><a href="lecture-18.html">Lecture 18&ndash;</a>Accumulators</li>
+      <li><a href="lecture-19.html">Lecture 19&ndash;</a>Tail Recursion</li>
+      <li><a href="lecture-20.html">Lecture 20&ndash;</a>Tail Recursion</li>
+      <li><a href="lecture-21.html">Lecture 21&ndash;</a>Graphs</li>
+      <li><a href="lecture-22.html">Lecture 22&ndash;</a>Graphs</li>
     </ul>
 
   </body>
