--- a/lectures/lecture-14.html
+++ b/lectures/lecture-14.html
@@ -110,6 +110,14 @@
 
     <p>As always, the best way to review today's material is to rework
       all three starters.</p>
+    
+    <p>The solutions for this lecture are:</p>
+
+    <ul>
+      <li><a href="m08-abstract-fold-definition-solution.rkt">m08-abstract-fold-definition-solution.rkt</a></li>
+      <li><a href="m08-abstract-fold-usages-solution.rkt">m08-abstract-fold-usages-solution.rkt</a></li>
+      <li><a href="m08-abstract-fold-complications-solution.rkt">m08-abstract-fold-complications-starter.rkt</a></li>
+    </ul>
 
     <p>Be sure to complete the before lecture section
     of <a href="lecture-15.html">Lecture 15</a> before that
