--- a/lectures/lecture-15.html
+++ b/lectures/lecture-15.html
@@ -56,15 +56,15 @@
     <p>The starters for this lecture are:</p>
 
     <ul>
-      <li><a href="m01-primitives-starter.rkt">m09-genrec-qsort-starter.rkt</a></li>
-      <li><a href="m01-primitives-starter.rkt">m09-genrec-simple-cantor-starter.rkt</a></li>
+      <li><a href="m09-genrec-qsort-starter.rkt">m09-genrec-qsort-starter.rkt</a></li>
+      <li><a href="m09-genrec-simple-cantor-starter.rkt">m09-genrec-simple-cantor-starter.rkt</a></li>
     </ul>
 	
     
     <h3>After Lecture</h3>
 
-    <p>The first problem was pretty incredible in terms of how many
-      design techniques we have learned it used:</p>
+    <p>qsort was pretty incredible in terms of how many design
+      techniques we have learned were used in the function design:</p>
 
     <ul>
       <li>HtDF (always!)</li>
