--- a/lectures/lecture-15.html
+++ b/lectures/lecture-15.html
@@ -102,8 +102,8 @@
     <p>The solutions for this lecture are:</p>
 
     <ul>
-      <li><a href="m01-primitives-solution.rkt">m09-genrec-qsort-solution.rkt</a></li>
-      <li><a href="m01-primitives-solution.rkt">m09-genrec-simple-cantor-solution.rkt</a></li>
+      <li><a href="m09-genrec-qsort-solution.rkt">m09-genrec-qsort-solution.rkt</a></li>
+      <li><a href="m09-genrec-simple-cantor-solution.rkt">m09-genrec-simple-cantor-solution.rkt</a></li>
     </ul>
     
     <p>Be sure to complete the before lecture section
