--- a/lectures/lecture-14.html
+++ b/lectures/lecture-14.html
@@ -42,7 +42,7 @@
     <p>Before lecture 14, you should:</p>
 
     <ul>
-      <li>Use the <a href="m08-raining-eggs-refactor-starter.rkt">m08-raining-eggs-refactor-starter.rkt</a> as additional practice for use built-in abstract function problems.</li> AFTER you have worked it through, consult the solution to check your work -  <a href="m08-raining-eggs-refactor-solution.rkt">m08-raining-eggs-refactor-solution.rkt.rkt</a> 
+      <li>Use the <a href="m08-raining-eggs-refactor-starter.rkt">m08-raining-eggs-refactor-starter.rkt</a> as additional practice for use built-in abstract function problems.</li> AFTER you have worked it through, consult the solution to check your work -  <a href="m08-raining-eggs-refactor-solution.rkt">m08-raining-eggs-refactor-solution.rkt</a> 
 
       <li>On edX work through the Fold Functions pt. 1 unit.</li>
 
