update lecture pages to have lecture topic in h2

--- a/lectures/lecture-02.html
+++ b/lectures/lecture-02.html
@@ -35,7 +35,7 @@
       ]
     </p>
 
-    <h2>Lecture 02</h2>
+    <h2>Lecture 02&mdash;How to Design Functions (HtDF recipe)</h2>
 
     <h3>Before Lecture</h3>
 
@@ -57,14 +57,14 @@
     <h3>During Lecture</h3>
 
     <p>This lecture introduces the most important element of the
-      course&ndash;the How to Design Functions (HtDF) recipe.  This is a
+      course&mdash;the How to Design Functions (HtDF) recipe.  This is a
       systematic process for designing a well-thought out, consistent,
       and well tested function.  By the end of the course you will use
       this recipe hundreds of times, and each time you will learn a
       little more about it.</p>
 
-    <p>By the end of the lecture&ndash;including the post-lecture
-      work&ndash;you should be able to:</p>
+    <p>By the end of the lecture&mdash;including the post-lecture
+      work&mdash;you should be able to:</p>
 
     <ul>
       <li>Use the HtDF recipe to systematically design simple
