--- a/lectures/lecture-03.html
+++ b/lectures/lecture-03.html
@@ -35,7 +35,7 @@
       ]
     </p>
     
-    <h2>Lecture 03</h2>
+    <h2>Lecture 03&mdash;How to Design Data (HtDD recipe)</h2>
     
     <h3>Before Lecture</h3>
 
@@ -60,7 +60,7 @@
     <h3>During Lecture</h3>
 
     <p>The How to Design Data (HtDD) recipe addresses a crucial issue
-    in the design of programs&ndash;how to design the data the program
+    in the design of programs&mdash;how to design the data the program
     operates on. Like the HtDF recipe, HtDD initially seems trivial
     and like too big a tool for the job.  But by learning to design
     data systematically now you will have an easier time with the
@@ -69,7 +69,7 @@
     information.  Once you have identified examples of the information
     you begin to design a way to represent that information as data.</p>
 
-    <p>By the end of the lecture&ndash;including the post-lecture work&ndash;you should be able to:</p>
+    <p>By the end of the lecture&mdash;including the post-lecture work&mdash;you should be able to:</p>
 
     <ul>
       <li>Use the HtDD recipe to systematically design data
