--- a/lectures/lecture-08.html
+++ b/lectures/lecture-08.html
@@ -35,7 +35,7 @@
       ]
     </p>
     
-    <h2>Lecture 08</h2>
+    <h2>Lecture 08&mdash;Recursive functions on naturals; three more helper rules</h2>
     
     <h3>Before Lecture</h3>
 
@@ -81,11 +81,11 @@
       example consumed n and produced n+1 nested boxes.  You should
       finish that starter file yourself as soon as possible.</p>
 
-    <p>Up until today we had only one helper function rule &ndash; the
+    <p>Up until today we had only one helper function rule &mdash; the
       reference rule. But now we have three more: function
       composition, operate on arbitrary sized data, and knowledge
       domain switch. Of these four rules, the first three are
-      unambiguous &ndash; you need to follow them every time. The
+      unambiguous &mdash; you need to follow them every time. The
       knowledge domain switch is more subjective, but you can usually
       tell pretty clearly when it is in play.</p>
 
