--- a/lectures/lecture-14.html
+++ b/lectures/lecture-14.html
@@ -35,7 +35,7 @@
       ]
     </p>
     
-    <h2>Lecture 14</h2>
+    <h2>Lecture 14&mdash;Fold Functions</h2>
     
     <h3>Before Lecture</h3>
 
