--- a/lectures/lecture-04.html
+++ b/lectures/lecture-04.html
@@ -35,7 +35,7 @@
       ]
     </p>
     
-    <h2>Lecture 04</h2>
+    <h2>Lecture 04&mdash;Interactive programs, big-bang and the HtDW recipe</h2>
     
     <h3>Before Lecture</h3>
 
@@ -59,7 +59,7 @@
       designing programs.  But real programs are much more than a
       single data definition or a single function.  Indeed they can
       comprise thousands of data definitions and tens of thousands of
-      functions&ndash;or even much more. Managing such a large project
+      functions&mdash;or even much more. Managing such a large project
       requires working systematically.</p>
 
     <p>The world program recipe (HtDW) helps us manage the design of a
@@ -69,14 +69,14 @@
       number of copies of HtDF.
       </p>
 
-    <p>By the end of the lecture&ndash;including the post-lecture work&ndash;you should be able to:</p>
+    <p>By the end of the lecture&mdash;including the post-lecture work&mdash;you should be able to:</p>
 
     <ul>
       <li>Use the HtDW recipe to systematically design a world program
 	operating on atomic data.</li>
       <li> Complete the entire design, including every
 	HtDW, HtDD, and HtDF design element.</li>
-      <li> Use all appropriate metadata tags&ndash;@htdw, @htdd, @dd-template-rules,
+      <li> Use all appropriate metadata tags&mdash;@htdw, @htdd, @dd-template-rules,
 	@htdf, @signature, and @template.</li>
     </ul>
 
