--- a/lectures/lecture-12.html
+++ b/lectures/lecture-12.html
@@ -35,7 +35,7 @@
       ]
     </p>
     
-    <h2>Lecture 12</h2>
+    <h2>Lecture 12&mdash;Local Expressions</h2>
     
     <h3>Before Lecture</h3>
 
