update index page to use mdash

--- a/lectures/index.html
+++ b/lectures/index.html
@@ -9,28 +9,28 @@
     <h2>Index of individual lectures</h2>
     
     <ul>
-      <li><a href="lecture-01.html">Lecture 01&ndash;Course overview, BSL expressions, functions</a></li>
-      <li><a href="lecture-02.html">Lecture 02&ndash;How to Design Functions (HtDF recipe)</a></li>
-      <li><a href="lecture-03.html">Lecture 03&ndash;How to Design Data (HtDD recipe)</a></li>
-      <li><a href="lecture-04.html">Lecture 04&ndash;Interactive programs, big-bang and the HtDW recipe</a></li>
-      <li><a href="lecture-05.html">Lecture 05&ndash;Compound data, extending an existing world program</a></li>
-      <li><a href="lecture-06.html">Lecture 06&ndash;Arbitrary-sized data, self reference, and natural recursion</a></li>
-      <li><a href="lecture-07.html">Lecture 07&ndash;Simple reference in types and natural helpers</a></li>
-      <li><a href="lecture-08.html">Lecture 08&ndash;Recursive functions on naturals; three more helper rules</a></li>
-      <li><a href="lecture-09.html">Lecture 09&ndash;Fixed arity trees</a></li>
-      <li><a href="lecture-10.html">Lecture 10&ndash;Mutual reference and mutual recursion</a></li>
-      <li><a href="lecture-11.html">Lecture 11&ndash;2 one-of</a></li>
-      <li><a href="lecture-12.html">Lecture 12&ndash;Local Expressions</a></li>
-      <li><a href="lecture-13.html">Lecture 13&ndash;Abstraction and Polymorphic Functions</a></li>
-      <li><a href="lecture-14.html">Lecture 14&ndash;Fold Functions</a></li>
-      <li><a href="lecture-15.html">Lecture 15&ndash;Generative Recursion</a></li>
-      <li><a href="lecture-16.html">Lecture 16&ndash;Search Problems</a></li>
-      <li><a href="lecture-17.html">Lecture 17&ndash;Search Problems cont'd</a></li>
-      <li><a href="lecture-18.html">Lecture 18&ndash;Accumulators</a></li>
-      <li><a href="lecture-19.html">Lecture 19&ndash;Tail Recursion</a></li>
-      <li><a href="lecture-20.html">Lecture 20&ndash;Tail Recursion</a></li>
-      <li><a href="lecture-21.html">Lecture 21&ndash;Graphs</a></li>
-      <li><a href="lecture-22.html">Lecture 22&ndash;Graphs</a></li>
+      <li><a href="lecture-01.html">Lecture 01&mdash;Course overview, BSL expressions, functions</a></li>
+      <li><a href="lecture-02.html">Lecture 02&mdash;How to Design Functions (HtDF recipe)</a></li>
+      <li><a href="lecture-03.html">Lecture 03&mdash;How to Design Data (HtDD recipe)</a></li>
+      <li><a href="lecture-04.html">Lecture 04&mdash;Interactive programs, big-bang and the HtDW recipe</a></li>
+      <li><a href="lecture-05.html">Lecture 05&mdash;Compound data, extending an existing world program</a></li>
+      <li><a href="lecture-06.html">Lecture 06&mdash;Arbitrary-sized data, self reference, and natural recursion</a></li>
+      <li><a href="lecture-07.html">Lecture 07&mdash;Simple reference in types and natural helpers</a></li>
+      <li><a href="lecture-08.html">Lecture 08&mdash;Recursive functions on naturals; three more helper rules</a></li>
+      <li><a href="lecture-09.html">Lecture 09&mdash;Fixed arity trees</a></li>
+      <li><a href="lecture-10.html">Lecture 10&mdash;Mutual reference and mutual recursion</a></li>
+      <li><a href="lecture-11.html">Lecture 11&mdash;2 one-of</a></li>
+      <li><a href="lecture-12.html">Lecture 12&mdash;Local Expressions</a></li>
+      <li><a href="lecture-13.html">Lecture 13&mdash;Abstraction and Polymorphic Functions</a></li>
+      <li><a href="lecture-14.html">Lecture 14&mdash;Fold Functions</a></li>
+      <li><a href="lecture-15.html">Lecture 15&mdash;Generative Recursion</a></li>
+      <li><a href="lecture-16.html">Lecture 16&mdash;Search Problems</a></li>
+      <li><a href="lecture-17.html">Lecture 17&mdash;Search Problems cont'd</a></li>
+      <li><a href="lecture-18.html">Lecture 18&mdash;Accumulators</a></li>
+      <li><a href="lecture-19.html">Lecture 19&mdash;Tail Recursion</a></li>
+      <li><a href="lecture-20.html">Lecture 20&mdash;Tail Recursion</a></li>
+      <li><a href="lecture-21.html">Lecture 21&mdash;Graphs</a></li>
+      <li><a href="lecture-22.html">Lecture 22&mdash;Graphs</a></li>
     </ul>
 
   </body>
