improve graders, simplify explanation of types of accumulators

--- a/lectures/lecture-17.html
+++ b/lectures/lecture-17.html
@@ -100,7 +100,7 @@
 	  <td>Also has the arb-tree template.</td>
 	</tr>
 	<tr>
-	  <td><a href="../bank/nqueens-starter.rkt">nqueens-solution.rkt</a></td>
+	  <td><a href="../bank/nqueens-solution.rkt">nqueens-solution.rkt</a></td>
 	  <td>Complete solution.</td>
 	</tr>
       </table>
