--- a/lectures/lecture-18.html
+++ b/lectures/lecture-18.html
@@ -72,9 +72,11 @@
 	function, and can contribute to the result, they are typically
 	not the direct result of the function.</li>
 
-      <li>Accumulators that maintain a worklist of elements that
-	remain to be visited in a tree or graph. (We will see these
-	later.)</li>
+      <li> (We will see these later.) Accumulators that maintain a
+	worklist of elements that remain to be visited in a tree or
+	graph, or that maintain a tandem worklist of accumulator
+	values to restore when the corresponding element is
+	visited.</li>
 
     </ul>
 
