--- a/lectures/lecture-19.html
+++ b/lectures/lecture-19.html
@@ -54,6 +54,7 @@
     <p>The starters for this lecture are:</p>
 
     <ul>
+      <li><a href="m10-reverse-starter.rkt">m10-reverse-starter.rkt</a></li>
       <li><a href="m10-tr-trees-starter.rkt">m10-tr-trees-starter.rkt</a></li>
     </ul>
 	
@@ -81,6 +82,14 @@
       introduce a worklist, because when we go down one branch of a
       tree there are other branches that we need to come back to
       later.</p>
+
+    <p>The solutions for this lecture are:</p>
+
+    <ul>
+      <li><a href="m10-reverse-solution.rkt">m10-reverse-solution.rkt</a></li>
+      <li><a href="m10-tr-trees-solution.rkt">m10-tr-trees-solution.rkt</a></li>
+    </ul>
+
       
 
     <p>Be sure to complete the before lecture section
