--- a/lectures/lecture-19.html
+++ b/lectures/lecture-19.html
@@ -44,8 +44,8 @@
     <ul>
       <li>Do an especially careful review of the two problems
       from <a href="lecture-18.html">lecture 18</a>.</li>
-      <li>Before this lecture, please watch the Worklist Accumulators
-	part 1 video.</li>
+      <li>Before this lecture, please watch all the Tail Recursion
+	videos and the Worklist Accumulators part 1 video.</li>
     </ul>
 
     
@@ -82,6 +82,11 @@
       introduce a worklist, because when we go down one branch of a
       tree there are other branches that we need to come back to
       later.</p>
+
+    <p>Be sure to finish the m10-tr-trees-starter.rkt file as soon as
+      you can. That will help you lock in how to work with tail
+      recursive tree templates, just like you once locked in how to work
+      with recursive list templates.</p>
 
     <p>The solutions for this lecture are:</p>
 
