--- a/lectures/lecture-21.html
+++ b/lectures/lecture-21.html
@@ -52,7 +52,7 @@
     
     <h3>After Lecture</h3>
     
-    <p>The solutions for today's lecture are:</p>
+    <p>The solutions for lecture 21 are:</p>
 
     <ul>
       <li><a href="m11-maze-4-way-solvable-no-revisits-solution.rkt">m11-maze-4-way-solvable-no-revisits-solution.rkt</a></li>
