--- a/lectures/index.html
+++ b/lectures/index.html
@@ -31,6 +31,7 @@
       <li><a href="lecture-20.html">Lecture 20&mdash;Tail Recursion</a></li>
       <li><a href="lecture-21.html">Lecture 21&mdash;Graphs</a></li>
       <li><a href="lecture-22.html">Lecture 22&mdash;Graphs</a></li>
+      <li><a href="lecture-23.html">Lecture 23&mdash;Summary and Looking Ahead</a></li>
     </ul>
 
   </body>
