--- a/lectures/lecture-04.html
+++ b/lectures/lecture-04.html
@@ -32,6 +32,7 @@
       <a href="lecture-20.html">L20</a>
       <a href="lecture-21.html">L21</a>
       <a href="lecture-22.html">L22</a>
+      <a href="lecture-23.html">L23</a>
       ]
     </p>
     
