--- a/lectures/lecture-23.html
+++ b/lectures/lecture-23.html
@@ -66,7 +66,7 @@
     <p>The solutions for this lecture are:</p>
 
     <ul>
-      <li><a href="m12-accs-and-python-loops-solution.rkt">m12-accs-and-python-loops-solution.rkt</a></li>
+      <li><a href="m12-python-loop-w-acc.py">m12-accs-and-python-loops-solution.rkt</a></li>
     </ul>
     
     <p>The best way to prepare for the final is to work through
