--- a/lectures/lecture-23.html
+++ b/lectures/lecture-23.html
@@ -57,17 +57,11 @@
     <p>The starter for this lecture is:</p>
 
     <ul>
-      <li><a href="m12-accs-and-python-loops-starter.rkt">m12-accs-and-python-loops-starter.rkt</a></li>
+      <li><a href="m12-python-loop-w-acc.py">m12-python-loop-w-acc.py</a></li>
     </ul>
 	
     
     <h3>After Lecture</h3>
-
-    <p>The solutions for this lecture are:</p>
-
-    <ul>
-      <li><a href="m12-python-loop-w-acc.py">m12-accs-and-python-loops-solution.rkt</a></li>
-    </ul>
     
     <p>The best way to prepare for the final is to work through
       practice problems without looking at solutions. It's even better
