various pre-term updates

--- a/lectures/lecture-01.html
+++ b/lectures/lecture-01.html
@@ -83,10 +83,10 @@
 
     <p>To complete the lecture first review primitives-starter (the solution is below).</p>
 
-    <p>Then work through all the sections of Module 1A: BSL.  Once you
+    <p>Then work through all the sections of edX Module 1A: BSL.  Once you
       are done you can complete the functions-starter file and work
       through it. Remember that reading the solution file before working
-      hard to solve it yourself is the worst way to try and learning
+      hard to solve it yourself is the worst way to try to learn
       this material&mdash;you have to struggle through it some yourself
       before looking at the solution or else you spoil the learning
       opportunity the problem gives you.</p>
