--- a/lectures/lecture-02.html
+++ b/lectures/lecture-02.html
@@ -150,9 +150,7 @@
     in the Syllabus. So, go back to the Discussion board and the
     Syllabus regularly!</p>
     
-    <p>Be sure to complete the before lecture section
-      of <a href="lecture-03.html">Lecture 3</a> <em>before</em>
-      that lecture.</p>
+    <p>Be sure to complete the before lecture section of <a href="lecture-03.html">Lecture 3</a> before that lecture.</p>
 
   </body>
 </html>
