--- a/lectures/lecture-03.html
+++ b/lectures/lecture-03.html
@@ -115,11 +115,7 @@
       <li><a href="m02-grade-standing-solution.rkt">m02-grade-standing-solution.rkt</a></li>
     </ul>
 
-    <p>
-      Be sure to complete the before lecture section
-      of <a href="lecture-04.html">Lecture 4</a> before that
-      lecture.
-    </p>
+    <p>Be sure to complete the before lecture section of <a href="lecture-04.html">Lecture 4</a> before that lecture.</p>
     
   </body>
 </html>
