--- a/lectures/lecture-06.html
+++ b/lectures/lecture-06.html
@@ -175,8 +175,7 @@
 	(Self-Reference) and re-work our own problems from class!</li>
     </ul> 
     
-    <p>Be sure to complete the before lecture section
-      of <a href="lecture-07.html">Lecture 7</a> before that lecture.</p>
+    <p>Be sure to complete the before lecture section of <a href="lecture-07.html">Lecture 7</a> before that lecture.</p>
 
   </body>
 </html>
