--- a/lectures/lecture-13.html
+++ b/lectures/lecture-13.html
@@ -57,7 +57,7 @@
 
 
     <p>The plan for lecture is:</p>
-
+    
     <ul>
       <li>Design an abstract fn from examples, and rewrite the
       original functions to call it. The lecture problem will involve
@@ -86,9 +86,7 @@
       <li><a href="m08-use-bia-fn-solution.rkt">m08-use-bia-fn-solution.rkt</a></li>
     </ul>
     
-
-    <p>Be sure to complete the before lecture section
-    of <a href="lecture-14.html">Lecture 14</a> before that
+     <p>Be sure to complete the before lecture section of <a href="lecture-14.html">Lecture 14</a> before that lecture.</p>
 
   </body>
 </html>
