--- a/lectures/lecture-14.html
+++ b/lectures/lecture-14.html
@@ -120,9 +120,7 @@
       <li><a href="m08-abstract-fold-complications-solution.rkt">m08-abstract-fold-complications-starter.rkt</a></li>
     </ul>
 
-    <p>Be sure to complete the before lecture section
-    of <a href="lecture-15.html">Lecture 15</a> before that
-    lecture.</p>
+    <p>Be sure to complete the before lecture section of <a href="lecture-15.html">Lecture 15</a> before that lecture.</p>
 
 
   </body>
