--- a/lectures/lecture-15.html
+++ b/lectures/lecture-15.html
@@ -107,9 +107,7 @@
       <li><a href="m09-genrec-simple-cantor-solution.rkt">m09-genrec-simple-cantor-solution.rkt</a></li>
     </ul>
     
-    <p>Be sure to complete the before lecture section
-      of <a href="lecture-16.html">Lecture 16</a> before that
-      lecture.</p>
+    <p>Be sure to complete the before lecture section of <a href="lecture-16.html">Lecture 16</a> before that lecture.</p>
 
   </body>
 </html>
