--- a/lectures/lecture-16.html
+++ b/lectures/lecture-16.html
@@ -127,9 +127,7 @@
     </ul>
 
 
-    <p>Be sure to complete the before lecture section
-      of <a href="lecture-17.html">Lecture 17</a> before that
-      lecture.</p>
+    <p>Be sure to complete the before lecture section of <a href="lecture-17.html">Lecture 17</a> before that lecture.</p>
 
 
   </body>
