--- a/lectures/lecture-17.html
+++ b/lectures/lecture-17.html
@@ -114,9 +114,7 @@
       <li><a href="m09-search-triangle-solitaire-solution.rkt">m09-search-triangle-solitaire-solution.rkt</a></li>
     </ul>
     
-    <p>Be sure to complete the before lecture section
-      of <a href="lecture-18.html">Lecture 18</a> before that
-      lecture.</p>
+    <p>Be sure to complete the before lecture section of <a href="lecture-18.html">Lecture 18</a> before that lecture.</p>
 
   </body>
 </html>
