--- a/lectures/lecture-19.html
+++ b/lectures/lecture-19.html
@@ -98,9 +98,7 @@
 
       
 
-    <p>Be sure to complete the before lecture section
-      of <a href="lecture-20.html">Lecture 20</a> before that
-      lecture.</p>
+    <p>Be sure to complete the before lecture section of <a href="lecture-20.html">Lecture 20</a> before that lecture.</p>
 
   </body>
 </html>
