--- a/lectures/lecture-20.html
+++ b/lectures/lecture-20.html
@@ -92,9 +92,7 @@
       <li><a href="m11-maze-4-way-path-solution.rkt">m11-maze-4-way-path-solution.rkt</a></li>
     </ul
           
-    <p>Be sure to complete the before lecture section
-    of <a href="lecture-21.html">Lecture 21</a> before that
-    lecture.</p>
+    <p>Be sure to complete the before lecture section of <a href="lecture-21.html">Lecture 21</a> before that lecture.</p>
 
   </body>
 </html>
