--- a/lectures/lecture-12.html
+++ b/lectures/lecture-12.html
@@ -132,9 +132,7 @@
     </ul>
 
 
-    <p>Be sure to complete the before lecture section
-    of <a href="lecture-13.html">Lecture 13</a> before that
-    lecture.</p>
+    <p>Be sure to complete the before lecture section of <a href="lecture-13.html">Lecture 13</a> before that lecture.</p>
 
   </body>
 </html>
